styles/index.css
@font-face {
    font-family: "Roboto";
    src: url(../fonts/Roboto.ttf) format('truetype');
    font-weight: 400;
    font-style: normal;
}

@font-face {
    font-family: "Roboto-Extra-Bold";
    src: url(../fonts/Roboto.ttf) format('truetype');
    font-weight: 800;
    font-style: normal;
}

@font-face {
    font-family: "Roboto-Light-Italic";
    src: url(../fonts/Roboto-Italic.ttf) format('truetype');
    font-weight: 300;
    font-style: italic;
}

:root {
    --main-bg-color: #1F2937;
    --main-txt-color: #F9FAF8;
    --secondary-txt-color: #E5E7EB;
    --action-bg-color: #3882F6;
    --main-txt: 3rem;
    --info-txt: 2.25rem;
    --header-txt: 1.5rem;
    --secondary-txt: 1.125rem;
}

* {
    font-family: "Roboto", sans-serif;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    display: flex;
    flex-direction: column;
}

header {
    padding-top: 2rem;
    background-color: var(--main-bg-color);
}

footer {
    text-align: center;
    padding: 2rem 0;
    background-color: var(--main-bg-color);
    color: var(--main-txt-color);
}

a {
    text-decoration-line: none;
}

header>div {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
}

.logo {
    color: var(--main-txt-color);
    font-size: var(--header-txt);
}

nav ul {
    display: flex;
    list-style: none;
    flex-direction: row;
    gap: 2rem;
    padding-left: 2rem;
}

nav a {
    color: var(--secondary-txt-color);
    font-size: var(--secondary-txt);
}

.main-content {
    max-width: 1200px;
    margin: 0px auto;
    padding: 0px 2rem;
}

.secondary-content {
    max-width: 850px;
    margin: 0px auto;
    padding: 0px 2rem;
}

main {
    display: flex;
    flex-direction: column;
    align-content: space-between;
}

.section-one {
    padding: 6rem 0px;
    background-color: var(--main-bg-color);
}

.section-one .container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    gap: 2rem;
}

.section-one h2 {
    font-family: "Roboto-Extra-Bold", sans-serif;
    font-size: var(--main-txt);
    color: var(--main-txt-color);
}

.section-one p {
    font-size: var(--secondary-txt);
    color: var(--secondary-txt-color);
}

.section-one button {
    margin-top: 1rem;
    border-color: var(--action-bg-color);
}

.section-one .container-child {
    flex: 1 1 0px;
}

.section-one .inner-container * {
    max-width: 490px;
}

.section-two {
    padding: 3rem 0px;
    margin-bottom: 2rem;
}

.section-two article {
    max-height: 75%;
}

.section-two .container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    flex-wrap: wrap;
    gap: 1rem 1rem;
    font-size: var(--secondary-txt);
}

.section-two h2 {
    font-family: "Roboto-Extra-Bold", sans-serif;
    font-size: var(--info-txt);
    color: var(--main-bg-color);
    text-align: center;
    margin-top: 20px;
    margin-bottom: 20px;
}

.section-two img,
figcaption {
    max-width: 11rem;
    text-align: center;
}

.section-two figcaption {
    color: var(--main-bg-color);
}

.section-two img {
    border: 5px solid;
    border-radius: 10%;
    border-color: var(--action-bg-color);
}

.section-three {
    padding: 8rem 0px;
    background-color: var(--secondary-txt-color);
}

.section-three article {
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 100%;
}

.section-three h2 {
    font-family: "Roboto-Light-Italic", sans-serif;
    font-size: var(--info-txt);
    color: var(--main-bg-color);
}

.section-three .author {
    text-align: right;
    padding-right: 1rem;
}

.section-four {
    padding: 6rem 0px;
}

.cta-container {
    flex: 1 1 0px;
    border-radius: 8px;
    padding-top: 3rem;
    padding-bottom: 3rem;
    background-color: var(--action-bg-color);
    color: var(--main-txt-color);
}

.cta {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    gap: 20px;
}

.sign-up {
    border: 2px solid;
    border-radius: 0.5rem;
    font-size: 1.125rem;
    cursor: pointer;
    min-width: 8rem;
    min-height: 2rem;
    background-color: var(--action-bg-color);
    color: var(--main-txt-color);
    border-color: var(--main-txt-color);
}

@media (max-width: 768px) {
    .cta {
        flex-direction: column;
        text-align: center;
        gap: 2rem;
    }
}

@media (max-width: 830px) {
    .section-one .container {
        flex-direction: column;
        gap: 2rem;
    }

    .section-one .inner-container {
        display: flex;
        flex-direction: column;
        align-items: center;
        text-align: center;
    }
}

@media (max-width:500px){
    nav ul{
        flex-direction: column;
        gap: 1rem;
    }
}

